# Hawk_I

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  RUNBOOK.md  TESTING.md  generate_demo_video.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements-base.txt  requirements-dl.txt  requirements-hpc.txt  requirements-vlm.txt  start.sh
backend/: .env.example  .gitignore  README.md  app.py  architecture_analysis.md  implementation_plan.md  nixpacks.toml  railway.json  requirements.txt  start.sh  task.md  test_accuracy.py  test_coral_scorer.py  update_analyze.py  update_duration.py  update_events.py  verify_ml_integration.py  verify_model_selector.py  walkthrough.md
docs/: ADVANCED_FEATURES.md  AI_AGENT_ARCHITECTURE.md  CLAUDE_CODE_BEST_PRACTICES.md  DEVELOPMENT_ROADMAP.md  EVALUATION_CONFIG.md  FEATURE_DEFINITIONS.csv  GAIT_COMPARISON_REPORT.md  HARDCASE_REGISTRY_V0_2.json  LEG_AGILITY_ANALYSIS_REPORT.md  LEG_AGILITY_AUGMENTATION_GUIDE.md  ML_DL_VLM_GUIDE.md  ML_TRAINING_RESULTS.csv  MOTOREXAM_VQA_FINGER_FEATURE_FIRST_PLAN_V0_1.md  MOTOREXAM_VQA_QWEN_COMPARISON_V0_1.md  MOTOREXAM_VQA_QWEN_LORA_EXECUTION_PLAN_V0_1.md  MOTOREXAM_VQA_QWEN_LORA_TRAINING_SPEC_V0_1.md  MOTOREXAM_VQA_RUNPOD_QWEN7B_SETUP_V0_1.md  MOTOREXAM_VQA_SAMPLING_POLICY_V0_1.md  MOTOREXAM_VQA_SPLIT_EXPERIMENT_PLAN_V0_1.md  MOTOREXAM_VQA_TWO_STAGE_PLAN_V0_1.md  NOTION_SYNC_2026-04-06.md  ORCHESTRATION_V0_1.json  ORCHESTRATION_V0_1.yaml  ORCHESTRATION_V0_2_TUNING.md  PD4T_DATASET.md  PD4T_TEST_SET_REPORT.md  PROJECT_SUMMARY.md  PUBLIC_REPO_SAFETY.md  README.md  RUNPOD_SINGLE_PROJECT_WORKSPACE.md  RUN_EVALUATION.md  SKELETON_FEATURES_ANALYSIS.md  SOTA_2025_SKELETON_ACTION_RECOGNITION.md  TECHNICAL_REPORT.md  TESTING.md  TRAINED_MODELS.md  USAGE_GUIDE.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  update_charts.py  update_labels.py  update_viz.py  vercel.json
ml_models/: finger_tapping_feature_cols.json  finger_tapping_feature_cols_v2.json  finger_tapping_scaler.pkl  gait_feature_cols.json  gait_scaler.pkl  ordinal_finger_tapping_scorer.pkl  rf_finger_tapping_scorer.pkl  (+4 more)
(+350 files in other folders)
