[project]
name = "hawkeye"
version = "0.1.0"
description = "AI-powered Parkinson's Disease motor assessment system using video analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
  # Data Processing
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0",

  # ML Core
  "scikit-learn>=1.3.0",
  "xgboost>=2.0.0",
  "joblib>=1.3.0",

  # Video/Image Processing
  "opencv-python>=4.8.0",
  "mediapipe>=0.10.0",
  "Pillow>=10.0.0",

  # Utilities
  "tqdm>=4.65.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",

  # Visualization
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",

  # Web Framework (Flask)
  "flask>=2.3.0",
  "flask-cors>=4.0.0",
]

[project.optional-dependencies]
# Deep Learning (LSTM, Transformer, CNN models)
dl = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "torchaudio>=2.1.0",
  "einops>=0.7.0",
  "timm>=0.9.0",
  "tensorboard>=2.14.0",
  "wandb>=0.15.0",
  "accelerate>=0.24.0",
]

# Vision-Language Models (Qwen-VL, LLaVA, etc.)
vlm = [
  "transformers>=4.36.0",
  "datasets>=2.15.0",
  "huggingface_hub>=0.19.0",
  "bitsandbytes>=0.41.0",
  "peft>=0.6.0",
  "qwen-vl-utils>=0.0.2",
  "decord>=0.6.0",
  "av>=10.0.0",
  "openai>=1.3.0",
  "anthropic>=0.7.0",
]

# HPC GPU Cluster Optimization
hpc = [
  "ninja>=1.11.0",
  "deepspeed>=0.12.0",
  "py-spy>=0.3.0",
  "memory_profiler>=0.61.0",
]

# Development & Testing
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.9.0",
  "flake8>=6.1.0",
  "mypy>=1.5.0",
]

# All optional dependencies
all = [
  "hawkeye[dl,vlm,hpc,dev]",
]

[tool.uv]
# Use UV for Python package management
python-version = "3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "--cov=backend --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
